# mercylm

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup_m4.sh
tlha/: __init__.py  __main__.py  config.py  dataset.py  eval_cases.py  generate_data.py  inference.py  model.py  prepare_data.py  train.py
tools/: export_to_hf.py
