[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tlha-llm"
version = "0.1.0"
description = "A 15M parameter LLM named Mercy — mercy: the only human left with pigeon gerald."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "language-model", "nlp", "pytorch", "tiny-model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["datasets", "onnx", "onnxruntime"]

[project.scripts]
tlha = "tlha.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tlha*"]
